# hyper

./: .gitignore  CMakeLists.txt
cmake/: DisableExceptionsRtti.cmake  SetCompilerWarningAll.cmake
doc/: CMakeLists.txt  Doxyfile.in
examples/: assert.cpp  assertf.cpp  destructor_spy.cpp
include/hyper/: Backtrace.h  Counter.h  DefaultDeleter.h  DefaultDestructor.h  Error.h  Exception.h  Function.h  Pair.h  ReferenceCounter.h  ScalarDestructor.h  ScopedArray.h  ScopedPointer.h  SharedArray.h  SharedPointer.h  StackTrace.h  StackTraceSnapshot.h  UniquePointer.h  VectorDestructor.h  assert.h  bounds.h  byte.h  float.h  integer.h  limits.h  pointer_util.h  pointer_utility.h  types.h  utility.h
src/: Backtrace.cpp  CMakeLists.txt  Counter.cpp  Error.cpp  Exception.cpp  StackTrace.cpp  StackTraceSnapshot.cpp  _.cpp
test/: ByteTest.cpp  CMakeLists.txt  CounterTest.cpp  DefaultDeleterTest.cpp  DefaultDestructorTest.cpp  FloatTest.cpp  IntegerTest.cpp  PairTest.cpp  ScopedArrayTest.cpp  ScopedPointerTest.cpp  SharedArrayTest.cpp  SharedPointerTest.cpp  TypesTest.cpp  UniquePointerTest.cpp  common.h  test.cpp
test/mocks/: DeleterMock.h
test/util/: CMakeLists.txt  DestructorSpy.cpp  DestructorSpy.h  FunctorSpy.h  SimpleWrapper.cpp  SimpleWrapper.h
